[build-system]
requires = [
    "setuptools>=43.0.0",
    "wheel"
]
build-backend = "setuptools.build_meta"


[project]
name = "objx"
description = "objects library"
version = "83"
authors = [
    {name = "Bart Thate", email = "bthate@dds.nl"},
]
readme = "README.rst"
license = {text="Public Domain"}
classifiers = [ 
    'Development Status :: 3 - Alpha',
    'License :: Public Domain',
    'Operating System :: Unix',
    'Programming Language :: Python',
    'Topic :: Utilities'
]


[project.urls]
"home" = "https://pypi.org/project/objx"
"bugs" = "https://github.com/xobjectz/objx/issues"
"source" = "https://github.com/xobjectz/objx"


[tool.setuptools]
packages = [
    'objx',
]
zip-safe=true


[tool.setuptools.data-files]
"share/doc/objx" = [
    "README.rst"
]

[tool.setuptools.exclude-package-data]
"*" = [
       "env*",
       "html*",
       "test*"
      ]
